--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -9,10 +9,10 @@ import {
 } from "astro-navbar";
 ---
 
-<header class="lg:flex p-5 gap-5">
+<header class="lg:flex padding-y-large gap-5 bg-primary-300 border-b-slate-300">
   <Astronav>
     <div
-      class="flex w-full lg:justify-between justify-start flex-col lg:flex-row items-baseline"
+      class="flex w-full lg:justify-between justify-start flex-col lg:flex-row items-baseline margin-x-small"
     >
       <div class="text-5xl poppins">
         <a href="/" class="no-underline"><strong>Suzza Silver</strong></a>
