--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Footer from "../components/base/Footer.astro";
       description="A growing community of writers who want more traffic to their blogs."
     />
   </head>
-  <body class="bg-primary-300">
+  <body>
     <Header />
     <main>
       <div class="grid grid-cols-12">
