--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Footer from "../components/base/Footer.astro";
       description="A growing community of writers who want more traffic to their blogs."
     />
   </head>
-  <body>
+  <body class="bg-white-50">
     <Header />
     <main>
       <div class="grid grid-cols-12">
@@ -21,6 +21,7 @@ import Footer from "../components/base/Footer.astro";
           class="lg:col-span-6 lg:col-start-4 lg:col-end-10 col-span-10 col-start-2 col-end-12"
         >
           <!--   Newsletter Signup -->
+
           <SlimNewsletter />
 
           <!-- Tagline -->
@@ -29,7 +30,7 @@ import Footer from "../components/base/Footer.astro";
           </div>
 
           <!-- Problem/Solution -->
-          <div id="problem-solution" class="rounded-xl bg-white-50 px-8 py-3">
+          <div id="problem-solution" class="rounded-xl text-pretty">
             <div id="problem">
               <h2 class="text-balance">
                 Problems with Starting a Blog and their Solutions
@@ -185,8 +186,8 @@ import Footer from "../components/base/Footer.astro";
   </body>
 </html>
 
-<!-- <style>
+<style>
   #problem-solution p {
-    width: 50ch;
+    width: 60ch;
   }
-</style> -->
+</style>
