--- a/src/pages/archive/[...page].astro
+++ b/src/pages/archive/[...page].astro
@@ -98,7 +98,10 @@ const { params } = Astro;
                         />
                       </a>
                     </div>
-                    <div id="card-text" class="p-8 bg-primary-200">
+                    <div
+                      id="card-text"
+                      class="p-8 bg-primary-200 border border-text-950"
+                    >
                       <p class="text-balance">
                         {" "}
                         <a href={`/${blogPostEntry.slug}`}>
