--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -104,7 +104,7 @@ const searchPosts = allPosts
                     return (
                       <li class="m-3">
                         <a
-                          class="rounded-xl bg-accent-400 underline p-2 hover:text-background-100"
+                          class="rounded-xl bg-accent-400 underline p-2 hover:text-white-50 hover:bg-accent-700"
                           href={`#${category}`}
                           title={`Go To ${category.replace(/-/g, " ")}`}
                         >
@@ -131,7 +131,7 @@ const searchPosts = allPosts
                     <li>
                       <div
                         id="card"
-                        class="rounded-xl bg-white-50 flex flex-col relative m-3"
+                        class="rounded-xl bg-white-50 flex flex-col"
                         style="width:15em;"
                       >
                         <div id="card-img">
@@ -148,7 +148,10 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div id="card-text" class="p-8 bg-primary-200">
+                        <div
+                          id="card-text"
+                          class="p-8 bg-primary-200 border-text-950 border"
+                        >
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -158,12 +161,14 @@ const searchPosts = allPosts
                             <li>{post.data.tldrTwo}</li>
                             <li>{post.data.tldrThree}</li>
                           </ul>
-                          <a
-                            href={`/${post.slug}`}
-                            class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50 absolute bottom-5 right-5"
-                          >
-                            Read More
-                          </a>
+                          <div class="flex justify-end">
+                            <a
+                              href={`/${post.slug}`}
+                              class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50"
+                            >
+                              Read More
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </li>
@@ -194,7 +199,7 @@ const searchPosts = allPosts
                     <li>
                       <div
                         id="card"
-                        class="rounded-xl bg-white-50 flex flex-col relative m-3"
+                        class="rounded-xl bg-white-50 flex flex-col"
                         style="width:15em;"
                       >
                         <div id="card-img">
@@ -211,7 +216,10 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div id="card-text" class="p-8 bg-primary-200">
+                        <div
+                          id="card-text"
+                          class="p-8 bg-primary-200 border-text-950 border"
+                        >
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -221,12 +229,14 @@ const searchPosts = allPosts
                             <li>{post.data.tldrTwo}</li>
                             <li>{post.data.tldrThree}</li>
                           </ul>
-                          <a
-                            href={`/${post.slug}`}
-                            class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50 absolute bottom-5 right-5"
-                          >
-                            Read More
-                          </a>
+                          <div class="flex justify-end">
+                            <a
+                              href={`/${post.slug}`}
+                              class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50"
+                            >
+                              Read More
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </li>
@@ -257,7 +267,7 @@ const searchPosts = allPosts
                     <li>
                       <div
                         id="card"
-                        class="rounded-xl bg-white-50 flex flex-col relative m-3"
+                        class="rounded-xl bg-white-50 flex flex-col"
                         style="width:15em;"
                       >
                         <div id="card-img">
@@ -274,7 +284,10 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div id="card-text" class="p-8 bg-primary-200">
+                        <div
+                          id="card-text"
+                          class="p-8 bg-primary-200 border-text-950 border"
+                        >
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -284,12 +297,14 @@ const searchPosts = allPosts
                             <li>{post.data.tldrTwo}</li>
                             <li>{post.data.tldrThree}</li>
                           </ul>
-                          <a
-                            href={`/${post.slug}`}
-                            class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50 absolute bottom-5 right-5"
-                          >
-                            Read More
-                          </a>
+                          <div class="flex justify-end">
+                            <a
+                              href={`/${post.slug}`}
+                              class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50"
+                            >
+                              Read More
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </li>
@@ -320,7 +335,7 @@ const searchPosts = allPosts
                     <li>
                       <div
                         id="card"
-                        class="rounded-xl bg-white-50 flex flex-col relative m-3"
+                        class="rounded-xl bg-white-50 flex flex-col"
                         style="width:15em;"
                       >
                         <div id="card-img">
@@ -337,7 +352,10 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div id="card-text" class="p-8 bg-primary-200">
+                        <div
+                          id="card-text"
+                          class="p-8 bg-primary-200 border-text-950 border"
+                        >
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -347,12 +365,14 @@ const searchPosts = allPosts
                             <li>{post.data.tldrTwo}</li>
                             <li>{post.data.tldrThree}</li>
                           </ul>
-                          <a
-                            href={`/${post.slug}`}
-                            class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50 absolute bottom-5 right-5"
-                          >
-                            Read More
-                          </a>
+                          <div class="flex justify-end">
+                            <a
+                              href={`/${post.slug}`}
+                              class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50"
+                            >
+                              Read More
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </li>
@@ -383,7 +403,7 @@ const searchPosts = allPosts
                     <li>
                       <div
                         id="card"
-                        class="rounded-xl bg-white-50 flex flex-col relative m-3"
+                        class="rounded-xl bg-white-50 flex flex-col"
                         style="width:15em;"
                       >
                         <div id="card-img">
@@ -400,7 +420,10 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div id="card-text" class="p-8 bg-primary-200">
+                        <div
+                          id="card-text"
+                          class="p-8 bg-primary-200 border-text-950 border"
+                        >
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -410,12 +433,14 @@ const searchPosts = allPosts
                             <li>{post.data.tldrTwo}</li>
                             <li>{post.data.tldrThree}</li>
                           </ul>
-                          <a
-                            href={`/${post.slug}`}
-                            class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50 absolute bottom-5 right-5"
-                          >
-                            Read More
-                          </a>
+                          <div class="flex justify-end">
+                            <a
+                              href={`/${post.slug}`}
+                              class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50"
+                            >
+                              Read More
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </li>
@@ -446,7 +471,7 @@ const searchPosts = allPosts
                     <li>
                       <div
                         id="card"
-                        class="rounded-xl bg-white-50 flex flex-col relative m-3"
+                        class="rounded-xl bg-white-50 flex flex-col"
                         style="width:15em;"
                       >
                         <div id="card-img">
@@ -463,7 +488,10 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div id="card-text" class="p-8 bg-primary-200">
+                        <div
+                          id="card-text"
+                          class="p-8 bg-primary-200 border-text-950 border"
+                        >
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -473,12 +501,14 @@ const searchPosts = allPosts
                             <li>{post.data.tldrTwo}</li>
                             <li>{post.data.tldrThree}</li>
                           </ul>
-                          <a
-                            href={`/${post.slug}`}
-                            class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50 absolute bottom-5 right-5"
-                          >
-                            Read More
-                          </a>
+                          <div class="flex justify-end">
+                            <a
+                              href={`/${post.slug}`}
+                              class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50"
+                            >
+                              Read More
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </li>
@@ -509,7 +539,7 @@ const searchPosts = allPosts
                     <li>
                       <div
                         id="card"
-                        class="rounded-xl bg-white-50 flex flex-col relative m-3"
+                        class="rounded-xl bg-white-50 flex flex-col"
                         style="width:15em;"
                       >
                         <div id="card-img">
@@ -526,7 +556,10 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div id="card-text" class="p-8 bg-primary-200">
+                        <div
+                          id="card-text"
+                          class="p-8 bg-primary-200 border-text-950 border"
+                        >
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -536,12 +569,14 @@ const searchPosts = allPosts
                             <li>{post.data.tldrTwo}</li>
                             <li>{post.data.tldrThree}</li>
                           </ul>
-                          <a
-                            href={`/${post.slug}`}
-                            class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50 absolute bottom-5 right-5"
-                          >
-                            Read More
-                          </a>
+                          <div class="flex justify-end">
+                            <a
+                              href={`/${post.slug}`}
+                              class="rounded-xl bg-accent-400 underline p-2 hover:bg-accent-700 hover:text-white-50"
+                            >
+                              Read More
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </li>
