ass astro fav icons

--- a/src/components/SlimNewsletter.astro
+++ b/src/components/SlimNewsletter.astro
@@ -1,5 +1,5 @@
 ---
-import NewsletterImage from "../assets/newsletter-image.jpg";
+import NewsletterImage from "/public/suzza-fav-icon.png";
 import { Image } from "astro:assets";
 ---
 
@@ -23,6 +23,7 @@ import { Image } from "astro:assets";
     >
       <p class="poppins">
         Join a Growing Community of Writers Who Want More Traffic To Their Blogs
+        by Subscribing Today.
       </p>
     </div>
     <div id="newsletter-form" class="flex justify-center">
