--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -607,4 +607,8 @@ const searchPosts = allPosts
     height: 300px;
     width: 300px;
   }
+
+  #blog-summary {
+    max-width: 65ch;
+  }
 </style>
