--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -83,7 +83,10 @@ const { frontmatter, headings } = Astro.props;
           <div
             class="col-span-10 col-start-2 col-end-12 lg:col-span-7 lg:col-start-2 lg:col-end-9"
           >
-            <div id="content" class="rounded-xl bg-white-50 margin-y-large p-8">
+            <div
+              id="content"
+              class="rounded-xl bg-white-50 margin-y-large p-8 paragraph-width"
+            >
               <!--   <a href="#comments">Skip to the Comments</a> -->
               <p>TL;DR</p>
               <ul>
@@ -264,5 +267,9 @@ const { frontmatter, headings } = Astro.props;
 <style>
   #category {
     text-transform: capitalize;
+  }
+
+  .paragraph-width {
+    max-width: 65ch;
   }
 </style>
