--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -148,10 +148,7 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div
-                          id="card-text"
-                          class="p-8 bg-primary-200 border-text-950 border"
-                        >
+                        <div id="card-text" class="p-8 bg-primary-200">
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -216,10 +213,7 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div
-                          id="card-text"
-                          class="p-8 bg-primary-200 border-text-950 border"
-                        >
+                        <div id="card-text" class="p-8 bg-primary-200">
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -284,10 +278,7 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div
-                          id="card-text"
-                          class="p-8 bg-primary-200 border-text-950 border"
-                        >
+                        <div id="card-text" class="p-8 bg-primary-200">
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -352,10 +343,7 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div
-                          id="card-text"
-                          class="p-8 bg-primary-200 border-text-950 border"
-                        >
+                        <div id="card-text" class="p-8 bg-primary-200">
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -420,10 +408,7 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div
-                          id="card-text"
-                          class="p-8 bg-primary-200 border-text-950 border"
-                        >
+                        <div id="card-text" class="p-8 bg-primary-200">
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -488,10 +473,7 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div
-                          id="card-text"
-                          class="p-8 bg-primary-200 border-text-950 border"
-                        >
+                        <div id="card-text" class="p-8 bg-primary-200">
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
@@ -556,10 +538,7 @@ const searchPosts = allPosts
                             />
                           </a>
                         </div>
-                        <div
-                          id="card-text"
-                          class="p-8 bg-primary-200 border-text-950 border"
-                        >
+                        <div id="card-text" class="p-8 bg-primary-200">
                           <p class="text-balance">
                             <a href={`/${post.slug}`}>{post.data.title}</a>
                           </p>
