--- a/src/pages/category/[category]/[...page].astro
+++ b/src/pages/category/[category]/[...page].astro
@@ -177,10 +177,7 @@ const { params } = Astro;
                         />
                       </a>
                     </div>
-                    <div
-                      id="card-text"
-                      class="p-8 bg-primary-200 border border-text-950"
-                    >
+                    <div id="card-text" class="p-8 bg-primary-200">
                       <p class="text-balance">
                         {" "}
                         <a href={`/${blogPostEntry.slug}`}>
