create card component

--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -4,7 +4,7 @@
 
 <div
   id="newsletter"
-  class="flex flex-col bg-background-50 rounded-xl margin-y-xxl"
+  class="flex flex-col bg-background-50 rounded-xl margin-y-xxl shadow-xl"
 >
   <div id="newsletter-signup" class="flex flex-col padding-y-med">
     <div
