--- a/src/components/Offer.astro
+++ b/src/components/Offer.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 
 <div
   id="offer-box"
-  class="bg-secondary-950 text-text-50 flex flex-col lg:flex-row margin-y-xxl rounded-xl"
+  class="bg-secondary-950 text-text-50 flex flex-col lg:flex-row margin-y-xxl rounded-xl shadow-xl"
 >
   <div id="newsletter-signup" class="flex flex-col padding-y-med">
     <div
